Reworking post cards search logic to remove page redirect bug and legibility issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,9 @@
     --accent: #111111;
     --accent-light: #f3f3f3;
     --accent-soft: #dedede;
+
     --logo-size: 4rem;
-    --max: 960px;
+    --max-width: 960px;
 }
 
 body {
@@ -16,6 +17,7 @@ body {
     font: 1.1rem Arial, "Helvetica Neue", Helvetica, sans-serif;
     background: var(--bg);
     color: var(--text);
+    text-rendering: optimizeLegibility;
 }
 
 a {
@@ -39,7 +41,7 @@ a {
 }
 
 .wrap {
-    width: min(calc(100% - 32px), var(--max));
+    width: min(calc(100% - 32px), var(--max-width));
     margin: 0 auto;
 }
 
@@ -58,11 +60,6 @@ a {
 
 .section p {
     padding-bottom: 10px;
-    /* text-align: justify;
-    letter-spacing: 0.01em;
-    word-spacing: -0.05em; */
-    /* text-justify: inter-word; */
-    /* hyphens: auto; */
     line-height: 1.5;
 }
 
@@ -112,6 +109,7 @@ a {
     width: 2.5rem;
     height: 2.5rem;
 }
+
 .posts-search img {
     width: inherit;
 }
@@ -256,11 +254,8 @@ h2 {
     display: flex;
     align-items: top;
     justify-content: space-between;
-    gap: 14px;
-}
-
-.post-card:hover .post-card-image {
-    transform: scale(1.1);
+    gap: 20px;
+    padding: 10px;
 }
 
 .post-card-text {
@@ -270,9 +265,15 @@ h2 {
     gap: 1px;
 }
 
+.post-card-text h2 {
+    padding-top: 0;
+    margin-top: 0;
+}
+
 .post-card-image {
-    width: 140px;
-    height: 92px;
+    width: 40%;
+    min-width: 300px;
+    height: 165px;
     object-fit: cover;
     flex: 0 0 auto;
     transition-duration: 0.3s;
@@ -284,6 +285,10 @@ h2 {
     color: var(--muted);
 }
 
+.post-card:hover h2 {
+    text-decoration: underline;
+}
+
 .social-links a {
     gap: 8px;
 }
@@ -292,7 +297,7 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 8px;
 }
 
 .btn,
@@ -334,8 +339,22 @@ h2 {
     }
 
     .post-card-image {
-        width: 90px;
-        height: 55px;
+        width: 40%;
+        transition: none;
+    }
+}
+
+@media (max-width: 640px) {
+    .post-card {
+        flex-direction: column;
+        padding: 1px;
+        gap: 5px;
+    }
+
+    .post-card-image {
+        width: 100%;
+        height: 200px;
+        min-width: 0;
         transition: none;
     }
 }
